--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,6 +74,11 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
+    compileOptions {
+	sourceCompatibility JavaVersion.VERSION_1_8
+	targetCompatibility JavaVersion.VERSION_1_8
+}
+
     namespace "com.videochat"
     defaultConfig {
         applicationId "com.videochat"
